---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=layout"
    - "--stop-after=layout"
    - panko/tests/cases/execute/generic/test_assignment_to_generic.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit
   (function-definition
      (main~0 `fn() -> int` (static main))
      (compound-statement
         (definition (value~1 `int` @0) (27 `int` @0))
         (expression
            (assign `int` @0
               (value~1 `int` @0)
               (42 `int` @0)))
         (return (value~1 `int` @0)))))

----- stderr -----
